--- a/dashboards/static/dashboards/css/general_analytics.css
+++ b/dashboards/static/dashboards/css/general_analytics.css
@@ -1,7 +1,12 @@
-#panel_loading_mask {
+#panel_loading_mask1,
+#panel_loading_mask2,
+#panel_loading_mask3,
+#panel_loading_mask4,
+#panel_loading_mask5 
+{
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 27em;
   opacity: 0.9;
   background: #f5f5f5;
   display: none;
@@ -9,13 +14,17 @@
   margin-top: -15px;
   margin-left: -15px;
 }
-#panel_loading_mask .loading {
+#panel_loading_mask1 .loading,
+#panel_loading_mask2 .loading,
+#panel_loading_mask3 .loading,
+#panel_loading_mask4 .loading,
+#panel_loading_mask5 .loading
+{
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .period-title {
