Ajustes de consulta do heatmap e ordenação por valor da table do bubble user

--- a/dashboards/templates/dashboards/manager/_logs_table.html
+++ b/dashboards/templates/dashboards/manager/_logs_table.html
@@ -34,7 +34,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-md-12 category-header">
-                                <h4 class="panel-title">
+                                <h4 class="panel-title panel-title-categories">
                                     <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#collapse1">
                                         <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {% trans 'Categories' %}
                                     </a>
@@ -43,7 +43,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             </div>
                         </div>
                     </div>
-                    <div id="collapse1" class="panel-collapse collapse">
+                    <div id="collapse1" class="panel-collapse collapse category-panel">
                         <div class="panel-body">
                             <div class="users_table">
                                 <div id="table-container" class="table-responsive">
@@ -75,7 +75,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-md-12 category-header">
-                                <h4 class="panel-title">
+                                <h4 class="panel-title panel-title-subjects">
                                     <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#collapse2">
                                         <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {% trans 'Subjects' %}
                                     </a>
@@ -84,7 +84,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             </div>
                         </div>
                     </div>
-                    <div id="collapse2" class="panel-collapse collapse ">
+                    <div id="collapse2" class="panel-collapse collapse subject-panel">
                         <div class="panel-body">
                             <div class="users_table">
                                 <div id="table-container" class="table-responsive">
@@ -118,7 +118,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-md-12 category-header">
-                                <h4 class="panel-title">
+                                <h4 class="panel-title panel-title-resources">
                                     <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#collapse3">
                                         <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {% trans 'Resources' %}
                                     </a>
@@ -127,7 +127,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             </div>
                         </div>
                     </div>
-                    <div id="collapse3" class="panel-collapse collapse">
+                    <div id="collapse3" class="panel-collapse collapse topic-panel">
                         <div class="panel-body">
                             <div class="users_table">
                                 <div id="table-container" class="table-responsive">
@@ -156,9 +156,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                     </div>
                         
                 </div>
-                <div id="#Categories" class="panel-collapse panel-body collapse category-panel-content">
-                    Testando
-                </div>
+                
                 
            </div>
         </div>
