--- a/dashboards/templates/dashboards/manager/_logs_table.html
+++ b/dashboards/templates/dashboards/manager/_logs_table.html
@@ -20,7 +20,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 class="fa fa-info-circle"
                 aria-hidden="true"
                 data-toggle="tooltip"
-                title="{% trans 'Element x Number of recorded logs' %}"
+                title="{% trans 'Compares the number of logs by categories, subjects or resources' %}"
                 ></i>
             </div>
         </div>
