Correção de tradução e consulta de logsChart

--- a/dashboards/templates/dashboards/manager/_users_bubble.html
+++ b/dashboards/templates/dashboards/manager/_users_bubble.html
@@ -17,7 +17,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             <div class="identifier">
                 <b>
                     {% trans 'Users that interacts the most' %}
-                    <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Compares the interactions number realized by the users subscribed in the subject' %}"></i>
+                    <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Compares the the interactions number realized by system users' %}"></i>
                 </b>
             </div>
             <div class="selector">
