--- a/questionary/templates/questionary/_results.html
+++ b/questionary/templates/questionary/_results.html
@@ -13,35 +13,56 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 {% load static i18n %}
 
 <script type="text/javascript">
+    function normalizeString (string) {
+        return string.split('').map(function (letter) {
+            let i = this.accents.indexOf(letter)
+            return (i !== -1) ? this.out[i] : letter
+            }.bind({
+            accents: 'ÀÁÂÃÄÅĄàáâãäåąßÒÓÔÕÕÖØÓòóôõöøóÈÉÊËĘèéêëęðÇĆçćÐÌÍÎÏìíîïÙÚÛÜùúûüÑŃñńŠŚšśŸÿýŽŻŹžżź',
+            out: 'AAAAAAAaaaaaaaBOOOOOOOOoooooooEEEEEeeeeeeCCccDIIIIiiiiUUUUuuuuNNnnSSssYyyZZZzzz'
+            })
+        ).join('');
+    }
+
     google.charts.load('current', {'packages':['corechart',"table"]});
     google.charts.setOnLoadCallback(drawTable);
+
+    let filteredData = [];
 
     let arrayData = [
         [
             {label: "{% trans 'Student' %}", id: 'student'},
-            {label: "{% trans 'Total questions' %}", id: 'questions'},
-            {label: "{% trans 'Total answered' %}", id: 'answered'},
-            {label: "{% trans 'Total correct' %}", id: 'correct'},
+            {label: "{% trans 'Total questions' %}", id: 'questions', type: 'number'},
+            {label: "{% trans 'Total answered' %}", id: 'answered', type: 'number'},
+            {label: "{% trans 'Total correct' %}", id: 'correct', type: 'number'},
             {label: "{% trans '% Correct' %}", id: 'percentage'},
         ]
     ];
 
+    let percentage = null;
+
     {% for json_data in data %}
+        percentage = "{{json_data.percentage}}";
+        percentage = percentage.replace(",", ".");
+        percentage = parseFloat(percentage); 
+
         arrayData.push([
-            "{{json_data.student}}", 
-            "{{json_data.total_questions}}", 
-            "{{json_data.total_answered}}",
-            "{{json_data.total_correct}}",
-            "{{json_data.percentage}} %"
+            {v: normalizeString("{{json_data.student}}").toLowerCase(), f:"{{json_data.student}}"}, 
+            {v: {% if json_data.total_questions != "-" %}{{json_data.total_questions}}{% else %}''{% endif %} , f: "{{json_data.total_questions}}"}, 
+            {v: {% if json_data.total_answered != "-" %}{{json_data.total_answered}}{% else %}''{% endif %} , f: "{{json_data.total_answered}}"}, 
+            {v: {% if json_data.total_correct != "-" %}{{json_data.total_correct}}{% else %}''{% endif %} , f: "{{json_data.total_correct}}"}, 
+            {v: percentage, f: percentage.toFixed(2) + "%"}
         ]);
     {% endfor %}
 
-    function drawTable() {
+    filteredData = arrayData;
+
+    function drawTable(data = arrayData, paginated = false) {
         let sortAscending = {0:false,1:false,2:false,3:false,4:false};
-        let tableData = google.visualization.arrayToDataTable(arrayData);
+        let tableData = google.visualization.arrayToDataTable(data);
 
         let options = {
-            sort: "event",
+            sort: "enable",
             allowHtml: true,
             cssClassNames : {
                 tableRow: 'text-center',
@@ -51,28 +72,16 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             showRowNumber: true,
             width: '100%',
             height: '100%',
-        }
-
-        function ordenar(properties){
-            let columnIndex = properties['column'];
-            
-            if (columnIndex >= 0) {
-                options["sortColumn"] = columnIndex;
-                options["sortAscending"] = sortAscending[columnIndex];
-                tableData.sort({column:columnIndex,desc:sortAscending[columnIndex]});
-                sortAscending = {0:false,1:false,2:false,3:false,4:false};
-                sortAscending[columnIndex] = !sortAscending[columnIndex];
-                
-                table.draw(tableData, options);
-            }
+            page: 'enable',
+            pageSize: 20
         }
 
         let table = new google.visualization.Table(document.getElementById('table_div'));
-        google.visualization.events.addListener(table, 'sort', function(e) {ordenar(e)});
         table.draw(tableData, options);
+
+        $("#title-table").text((data.length - 1) + " {% trans 'results(s)' %}");
     }
 </script>
-
 
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
@@ -83,12 +92,12 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                         <li><h3 id="title-table"></h3></li>
                     </ul>
                 </li>
-                <!--<li>
+                <li>
                     <ul class="list-inline text-right">
                         <li><p>{% trans "Filter: " %}</p></li>
                         <li><input id="search-input" class="form-control" type="text" name="search" value=""></li>
                     </ul>
-                </li>-->
+                </li>
             </ul>
         </div>
         <form id="google-chart-checkbox" action="" method="get">
@@ -101,3 +110,29 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    $("#search-input").on("keyup",function(){
+        filteredData = [];
+
+        let text = $("#search-input").val();
+        
+        searcher(text.toLowerCase());
+    });
+
+    function searcher(text){
+        filteredData.push(arrayData[0]);
+
+        for (let i = 1; i < arrayData.length; i++) {
+            if (arrayData[i][0]["f"].toLowerCase().includes(text)
+            || arrayData[i][1]["f"].toLowerCase().includes(text)
+            || arrayData[i][2]["f"].toLowerCase().includes(text)
+            || arrayData[i][3]["f"].toLowerCase().includes(text)
+            || arrayData[i][4]["f"].toLowerCase().includes(text)) {
+                filteredData.push(arrayData[i]);
+            }
+        }
+
+        drawTable(filteredData);
+    }
+</script>
