Correção do bug seletor

--- a/dashboards/templates/dashboards/manager/_users_bubble.html
+++ b/dashboards/templates/dashboards/manager/_users_bubble.html
@@ -55,7 +55,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         <div class="users_cloud">
             
         </div>
-        <div class="users_table">
+        <div class="users_table" id="users_table_bubble">
 
             <div id="table-container" class="table-responsive">
                 <table id="students_table" class="table table-hover">
