--- a/subjects/templates/subjects/view.html
+++ b/subjects/templates/subjects/view.html
@@ -34,6 +34,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     {% endif %}
 
     {% subject_permissions request.user subject as has_subject_permissions %}
+    {% subject_manage_permissions request.user subject as has_subject_manage_permissions %}
 
 	{% if subject.visible %}
 		<div class="panel panel-info subject-panel" id="subject_{{subject.slug}}">
@@ -49,21 +50,25 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                     </h4>
 
                     <div class="col-md-5 pull-right category-card-items">
-                        {% if request.user in subject.professor.all or request.user in subject.category.coordinators.all or request.user.is_staff %}
+                        {% if has_subject_permissions %}
                             <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
                             </a>
                             <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                                {% if request.user not in subject.professor.all %}
+                                {% if has_subject_manage_permissions %}
                                 <li><a href="{% url 'subjects:replicate' subject.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
                                 {% endif %}
+                                {% if has_subject_manage_permissions %}
                                 <li><a href="{% url 'subjects:update' subject.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+                                {% endif %}
                                 <li><a href="{% url 'groups:index' subject.slug %}"><i class="fa fa-group fa-fw" aria-hidden="true"></i>{% trans 'Groups' %}</a></li>
                                 <li><a href="{% url 'questions_database:index' subject.slug %}"><i class="fa fa-question-circle fa-fw" aria-hidden="true"></i>{% trans 'Questions Database' %}</a></li>
                                 <li><a href="{% url 'subjects:backup' subject.slug %}"><i class="fa fa-database fa-fw" aria-hidden="true"></i>{% trans 'Backup' %}</a></li>
                                 <li><a href="{% url 'subjects:restore' subject.slug %}"><i class="fa fa-recycle fa-fw" aria-hidden="true"></i>{% trans 'Restore' %}</a></li>
                                 <!--<li><a href="{% url 'subjects:reports:create_interaction' %}?subject_id={{subject.id}}"><i class="fa fa-bolt fa-fw" aria-hidden="true"></i>{% trans 'Interaction Data' %}</a></li>-->
+                                {% if has_subject_manage_permissions %}
                                 <li><a href="javascript:delete_subject.get('{% url 'subjects:delete' subject.slug %}?view=index','#subject','#modal_subject')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                                {% endif %}
                             </ul>
                         {% endif %}
 
