--- a/amadeus/static/css/themes/red.sass
+++ b/amadeus/static/css/themes/red.sass
@@ -38,8 +38,8 @@ $secondary-subject: #777777
 $primary-topic: #616161
 $secondary-topic: #919191
 
-$btn-success: #FF8E01
-$btn-success-effect: #FF8E01
+$btn-success: #f4891f
+$btn-success-effect: #f4891f
 
 $link-color: #333333
 
